--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
+    id "io.freefair.lombok" version '8.6'
 }
 
 group 'ru.netology'
@@ -10,6 +12,10 @@ java {
 }
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
+
+allure {
+    version = '2.20.1'
+}
 
 repositories {
     mavenCentral()
@@ -22,6 +28,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.36'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
     testImplementation 'org.slf4j:slf4j-simple:1.7.32'
+    testImplementation 'io.qameta.allure: allure-selenide: 2.13.3'
 }
 
 test {
